# GLCollection

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  cube.cpp  gl.h  glfw_utilities.h  screen_quad.cpp  screenshot.cpp  shader.h  visualizing_normals.cpp
libs/: linmath.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: visualize_normals.frag  visualize_normals.geom  visualize_normals.vert
